# CLion

./: BF.cpp  CMakeLists.txt  KMP.cpp  LongestSubSeq.cpp  MaxLenOrder.cpp  banker.cpp  longest_pal_sub.cpp  miniCreateTreePrim.cpp  miniTreeCreateKru.cpp  mini_difference.cpp  num_word_sort.cpp  te.cpp  test.c  test.txt
Exercises/: 3.13.cpp  3.14.cpp  3.15.cpp  3.2.cpp  3.3.cpp  3.4.cpp  3.6.cpp  3.7.cpp  3.9.cpp  4.10.cpp  4.14.cpp  4.3.1.cpp  4.5.cpp  4.6.cpp  6.2.1.cpp  6.8.cpp  7.2.3.cpp  8.1.1.cpp  fake_money.cpp
MachineTest/: 2.1.cpp  2.2.cpp  2.3.cpp  2.4.cpp  2.5.cpp  2.6.cpp  ex2.8.cpp
PAT/: 1008.cpp  1009.cpp  1010.cpp  1011.cpp  1012.cpp  1013.cpp  1014.cpp  1015.cpp  1016.cpp  1017.cpp  1018.cpp  1019.cpp  1020.cpp  1021.cpp  1022.cpp  late_weight_stone.cpp  readme.txt
Sort/: BubbleSort.cpp  CountSort.cpp  InsertSort.cpp  QuickSort.cpp
compile/: syntax-parser1.cpp  test.txt  word-parser.h
