cmake_minimum_required(VERSION 3.14)
project(C++)

set(CMAKE_CXX_STANDARD 14)

add_executable(mini_difference mini_difference.cpp)
add_executable(1008 PAT/1008.cpp)
add_executable(1009 PAT/1009.cpp)
add_executable(1010 PAT/1010.cpp)
add_executable(1011 PAT/1011.cpp)
add_executable(1012 PAT/1012.cpp)
add_executable(1013 PAT/1013.cpp)
add_executable(1014 PAT/1014.cpp)
add_executable(BF BF.cpp)
add_executable(KMP KMP.cpp)
add_executable(3.2 Exercises/3.2.cpp)
add_executable(3.3 Exercises/3.3.cpp)
add_executable(3.6 Exercises/3.6.cpp)
add_executable(3.7 Exercises/3.7.cpp)
add_executable(3.9 Exercises/3.9.cpp)
add_executable(3.4 Exercises/3.4.cpp)
add_executable(BubbleSort Sort/BubbleSort.cpp)
add_executable(3.14 Exercises/3.14.cpp)
add_executable(3.15 Exercises/3.15.cpp)
add_executable(3.13 Exercises/3.13.cpp)
add_executable(4.5 Exercises/4.5.cpp)
add_executable(4.10 Exercises/4.10.cpp)
add_executable(QuickSort Sort/QuickSort.cpp)
add_executable(1015 PAT/1015.cpp)
add_executable(4.6 Exercises/4.6.cpp)
add_executable(num_word_sort num_word_sort.cpp)
add_executable(1016 PAT/1016.cpp)
add_executable(1017 PAT/1017.cpp)
add_executable(1018 PAT/1018.cpp)
add_executable(1019 PAT/1019.cpp)
add_executable(1020 PAT/1020.cpp)
add_executable(1021 PAT/1021.cpp)
add_executable(1022 PAT/1022.cpp)
add_executable(4.14 Exercises/4.14.cpp)
add_executable(4.3.1 Exercises/4.3.1.cpp)
add_executable(fake_money Exercises/fake_money.cpp)
add_executable(test test.c)
add_executable(6.2.1 Exercises/6.2.1.cpp)
add_executable(6.8 Exercises/6.8.cpp)
add_executable(banker banker.cpp)
add_executable(7.2.3 Exercises/7.2.3.cpp)
add_executable(miniCreateTree miniCreateTreePrim.cpp)
add_executable(miniTreeCreateKru miniTreeCreateKru.cpp)
add_executable(8.1.1 Exercises/8.1.1.cpp)
add_executable(syntax-parser1 compile/syntax-parser1.cpp)
add_executable(MaxLenOrder MaxLenOrder.cpp)
add_executable(LongestSubSeq LongestSubSeq.cpp)
add_executable(te te.cpp)

add_executable(late_weight_stone PAT/late_weight_stone.cpp)
add_executable(2.1 MachineTest/2.1.cpp)
add_executable(2.2 MachineTest/2.2.cpp)
add_executable(2.3 MachineTest/2.3.cpp)
add_executable(2.4 MachineTest/2.4.cpp)
add_executable(2.5 MachineTest/2.5.cpp)
add_executable(ex2.8 MachineTest/ex2.8.cpp)
add_executable(2.6 MachineTest/2.6.cpp)
add_executable(CountSort Sort/CountSort.cpp)
add_executable(InsertSort Sort/InsertSort.cpp)